[metadata]
name= glglue
url= https://github.com/ousttrue/glglue
description= The glue code which mediates between OpenGL and some GUI
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue,
author_email= ousttrue@gmail.com
license=zlib
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Graphics :: 3D Modeling
keywords= opengl

[options]
package_dir=
    =src
packages=find:
install_requires =
  pyopengl

[options.packages.find]
where=src
