[metadata]
name= glglue
url= https://ousttrue.github.io/glglue/
project_url=
    source= https://github.com/ousttrue/glglue/
description= The glue code which mediates between OpenGL and some GUI
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
classifiers=
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Graphics :: 3D Modeling
include_package_data = True

[options]
packages=find:
install_requires =
  pyopengl

[options.package_data]
glglue = assets/*
